mostly implement the voice backend relay mode